[project]
name = "math-learning"
version = "0.1.0"
description = "A repository for learning mathematics through Python notebooks"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "sympy>=1.12",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "pandas>=2.0.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "notebook>=7.0.0",
    "torch>=2.9.1",
]

